--- a/resources/assets/sass/modules/lists/_favourites.scss
+++ b/resources/assets/sass/modules/lists/_favourites.scss
@@ -15,7 +15,7 @@
     }
     
     @media (max-width: $breakpoint1) {
-        max-height: 430px;
+        max-height: 400px;
         top: 49px;
         right: auto;
         width: 91%;
